<resources>
    <string name="app_name">shupool</string>
    <string name="settingActivity_name">Settings</string>
    <string name="map_sample_activity_name">Map Sample</string>
    <string name="acitivity_intro_imageLogo">imageLogo</string>
    <string name="acitivity_intro_imageBottom">imageBottom</string>
    <string name="action_settings">Settings</string>
    <string name="main_drawer_header_text">KNSample</string>
    <string name="main_drawer_item_search">검색</string>
    <string name="main_drawer_item_dguide">길안내</string>
    <string name="main_drawer_item_map_sample">Map Sample</string>
    <string name="main_drawer_item_setting">설정</string>
    <string name="search_content">Search</string>
    <string name="map_sample_00_btn_01">라인 추가</string>
    <string name="map_sample_00_btn_02">라인 제거</string>
    <string name="map_sample_00_btn_03">원 그리기</string>
    <string name="map_sample_00_btn_04">원 지우기</string>
    <string name="map_sample_00_btn_05">폴리곤 추가</string>
    <string name="map_sample_00_btn_06">폴리곤 제거</string>
    <string name="map_sample_00_btn_07">구멍 난 폴리곤 추가</string>
    <string name="map_sample_00_btn_08">구멍 난 폴리곤 제거</string>
    <string name="map_sample_01_btn_01">애니메이션 시간</string>
    <string name="map_sample_01_btn_02">중심점 이동</string>
    <string name="map_sample_01_btn_03">줌 인</string>
    <string name="map_sample_01_btn_04">줌 아웃</string>
    <string name="map_sample_01_btn_05">탑 뷰 전환</string>
    <string name="map_sample_01_btn_06">버드 뷰 전환</string>
    <string name="map_sample_01_btn_07">지도 회전</string>
    <string name="map_sample_02_btn_01">좌표 표시</string>
    <string name="map_sample_02_btn_02">마커 제거</string>
    <string name="map_sample_02_btn_03">마커 추가</string>
    <string name="map_sample_02_btn_04">마커 이동</string>
    <string name="map_sample_02_btn_05">마커 숨기기</string>
    <string name="map_sample_02_btn_06">커스텀 마커 추가</string>
    <string name="map_sample_02_btn_07">마커 화면 맞춤</string>
    <string name="map_sample_02_btn_08">유저 로케이션 이동</string>
    <string name="map_sample_03_btn_01">지도 주행 낮</string>
    <string name="map_sample_03_btn_02">지도 주행 밤</string>
    <string name="map_sample_03_btn_03">지도 검색 낮</string>
    <string name="map_sample_03_btn_04">지도 검색 밤</string>
    <string name="map_sample_03_btn_05">교통량 on/off</string>
    <string name="KNSample_Settings_user_id">knsample_pref_default_user_id</string>
    <string name="KNSample_Settings_Sound_Volume">knsample_pref_etc_snd_volume</string>
    <string name="KNSample_Settings_Car_Type">knsample_pref_guide_car_type</string>
    <string name="KNSample_Settings_Use_Hipass">knsample_pref_guide_use_hipass</string>
    <string name="KNSample_Settings_Car_Width">knsample_pref_guide_car_width</string>
    <string name="KNSample_Settings_Car_Height">knsample_pref_guide_car_height</string>
    <string name="KNSample_Settings_Car_Length">knsample_pref_guide_car_Length</string>
    <string name="KNSample_Settings_Car_Weight">knsample_pref_guide_car_Weight</string>
    <string name="KNSample_Settings_Fuel_Type">knsample_pref_guide_fuel_type</string>
    <string name="KNSample_Settings_Map_Display_Type">knsample_pref_map_display_type</string>
    <string name="KNSample_Settings_Map_Use_DarkMode">knsample_pref_map_use_darkmode</string>
    <string name="KNSample_Settings_Map_Traffic_Mode">knsample_pref_map_traffic_mode</string>
    <string name="KNSample_Settings_Map_Language">knsample_pref_map_language</string>
    <string name="KNSample_Settings_Show_Poi">knsample_pref_map_show_poi</string>
    <string name="KNSample_Settings_Show_Building">knsample_pref_map_show_building</string>
    <string name="title_kimgisa_login">김기사 계정 로그인</string>
    <string name="title_main">자주 가는 곳</string>
    <string name="title_main_edit_destionation">등록된 장소 편집</string>
    <string name="title_destionation_edit">장소 수정</string>
    <string name="title_history">최근 방문</string>
    <string name="title_tag">태그</string>
    <string name="title_search">검색</string>
    <string name="title_recent_search">최근검색</string>
    <string name="title_address_search">주소검색</string>
    <string name="title_around_search">주변검색</string>
    <string name="title_more">더보기</string>
    <string name="title_setting">환경 설정</string>
    <string name="title_auth">카카오내비 이용약관</string>
    <string name="title_more_myinfo">내 정보 / 차량 정보</string>
    <string name="title_more_withdraw">탈퇴하기</string>
    <string name="title_more_voice">길안내 음성</string>
    <string name="title_setting_night_mode">야간 모드</string>
    <string name="title_setting_blackbox">블랙박스 녹화</string>
    <string name="title_setting_blackbox_size">녹화 사이즈</string>
    <string name="title_setting_blackbox_encoder">인코더</string>
    <string name="title_setting_blackbox_max">녹화 용량</string>
    <string name="title_setting_voice_reco">음성 검색</string>
    <string name="title_setting_voice_gesture">음성 인식 제스처</string>
    <string name="title_more_voice_list">음성 선택</string>
    <string name="title_more_notice">공지사항</string>
    <string name="title_more_error_report">오류 제보</string>
    <string name="title_more_error_report_edit">오류 제보 편집</string>
    <string name="title_more_map_setting">지도 다운로드</string>
    <string name="title_more_event">이벤트</string>
    <string name="title_more_car">내 차 아이콘</string>
    <string name="title_more_permission">접근권한 설정</string>
    <string name="title_more_permission_m_under">접근권한</string>
    <string name="title_more_t_account">카카오 T 계정 관리</string>
    <string name="title_voice_gree">정보수집동의</string>
    <string name="title_more_widget_settings">위젯 설정</string>
    <string name="title_more_widget_add">위젯 추가</string>
    <string name="label_kakao_navi">카카오내비</string>
    <string name="label_confirm">확인</string>
    <string name="label_yes">예</string>
    <string name="label_no">아니요</string>
    <string name="label_setting">설정</string>
    <string name="label_setup">설정하기</string>
    <string name="label_save">저장</string>
    <string name="label_apply">적용</string>
    <string name="label_close">닫기</string>
    <string name="label_complete">완료</string>
    <string name="label_back">이전</string>
    <string name="label_agree">동의</string>
    <string name="label_list_more">장소 결과 더보기</string>
    <string name="label_select_delete">선택한 장소 삭제</string>
    <string name="label_all">전체</string>
    <string name="label_delete">삭제</string>
    <string name="label_edit">편집</string>
    <string name="label_modify">수정</string>
    <string name="label_cancel">취소</string>
    <string name="label_retry">재시도</string>
    <string name="label_termination">종료</string>
    <string name="label_lot_number_address">지번</string>
    <string name="label_street_name_address">도로명</string>
    <string name="label_current_location">현재 위치</string>
    <string name="label_safe_driving">안전 운전</string>
    <string name="label_notice">공지사항</string>
    <string name="label_version_update">업데이트</string>
    <string name="label_next_time">나중에</string>
    <string name="label_copy">번호복사</string>
    <string name="label_people_count">명</string>
    <string name="label_dog">개</string>
    <string name="label_distance">거리</string>
    <string name="label_tollfee">통행료</string>
    <string name="label_continue_directions">길안내 계속</string>
    <string name="label_setting_right_now">지금 설정</string>
    <string name="label_around">주변</string>
    <string name="msg_error_network_connection_check">네트워크 연결이 원활하지 않습니다.</string>
    <string name="msg_error_login_fail_retry">카카오 회원 인증에 실패하였습니다. \n다시 시도하시겠습니까?</string>
    <string name="msg_error_temporary_fail">일시적인 오류가 발생했습니다.\n다시 시도해주세요.</string>
    <string name="msg_error_abnormal_access">비정상 접근 오류\n잠시 후 다시 시도해 주세요.</string>
    <string name="msg_error_abnormal_uri">잘못된 접근 입니다.</string>
    <string name="msg_error_not_supported">지원하지 않는 기기입니다.</string>
    <string name="msg_error_google_play_service">구글 플레이 서비스가 정상적으로 동작하지 않습니다.\n구글 플레이 서비스 버전과 계정상태를 확인해 주세요.</string>
    <string name="msg_destination_delete_check">선택한 장소를 삭제할까요?</string>
    <string name="msg_emoticons_not_supported">이모티콘은 사용할 수 없습니다.</string>
    <string name="msg_phone_not_supported">전화 기능을 이용할 수 없습니다.</string>
    <string name="msg_regist_destination_fail">장소 등록에 실패하였습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="msg_termination_kakaonavi">카카오내비를 종료합니다.</string>
    <string name="msg_clipboard_copy_fail">클립보드 복사를 할 수 없습니다.</string>
    <string name="msg_request_info_fail">요청한 정보가 유효하지 않습니다.</string>
    <string name="msg_address_none">주소 확인 불가</string>
    <string name="msg_rei_ignore_route">무시하고 경로 탐색</string>
    <string name="msg_rei_ignore_directions">무시하고 길안내</string>
    <string name="msg_error_code" formatted="false">(오류코드 %s)</string>
    <string name="msg_error_gps_fail">GPS 데이터 수신이 불가능하여 카카오내비 앱을 종료합니다.</string>
    <string name="msg_error_googleplay_fail">구글 플레이 서비스가 정상 동작하지 않습니다. 구글 플레이 서비스 버전과 계정 상태를 확인해 주세요.</string>
    <string name="msg_ferry_guide_included">경로 상에 배를 통한 이동이 포함되어 있습니다.</string>
    <string name="label_permission_setting">권한 설정</string>
    <string name="label_permission_location">위치</string>
    <string name="label_permission_storage">저장공간</string>
    <string name="label_permission_microphone">마이크</string>
    <string name="label_permission_phone">전화</string>
    <string name="label_permission_contacts">주소록</string>
    <string name="label_permission_camera">카메라</string>
    <string name="label_permission_address_book">주소록</string>
    <string name="label_option_overlay">다른앱 위에 그리기</string>
    <string name="label_option_widget">위젯</string>
    <string name="label_permission_default">필수</string>
    <string name="label_permission_option">선택</string>
    <string name="msg_permission_location_desc">길안내, 벌집 화면 구성, 주변검색을 위해 필요</string>
    <string name="msg_permission_storage_desc">지도 데이터 및 리소스 저장을 위해 필요</string>
    <string name="msg_permission_phone_desc">주행 시 전화 통화 시 길안내 음소거를 위해 필요</string>
    <string name="msg_permission_mic_desc">블랙박스 음성 녹화를 위해 필요</string>
    <string name="msg_permission_address_book_desc">음성 인식을 통한 전화걸기를 위해 필요</string>
    <string name="msg_option_overlay_desc">백그라운드 실행시 길안내 위젯을 다른 앱 위에 표시</string>
    <string name="msg_base_permission_denied">카카오내비를 이용하시려면 필수 권한을 허용해야 합니다.</string>
    <string name="msg_t_account_permission_denied">카카오T 계정 관리를 이용하시려면 필수 권한을 허용해야 합니다.</string>
    <string name="msg_permission_denied">해당 기능을 사용하시려면 아래 권한을 허용해야 합니다.</string>
    <string name="msg_permission_denied_camera">카메라 접근 권한이 없어서 카메라를 사용할 수 없습니다.</string>
    <string name="msg_permission_denied_camera_ar">카메라 접근 권한이 없어서 AR내비모드를 사용할 수 없습니다.</string>
    <string name="msg_permission_option_etc_desc">\'선택\' 권한은 동의하지 않아도 서비스 이용이 가능</string>
    <string name="msg_permission_guide">카카오내비를 사용하기 위해\n필요한 <b>접근 권한</b>을 허용해주세요.</string>
    <string name="msg_system_alert_window_permission_denied">백그라운드 실행 시 길안내 위젯을 다른 앱 위에 표시하기 위해 다른앱 위에 그리기 사용을 허용해야 합니다.</string>
    <string name="msg_permission_blackbox">블랙박스를 사용하려면 카메라 권한이 필요합니다.</string>
    <string name="msg_permission_denied_blackbox">카메라에 대한 접근 권한이 없어 블랙박스를 사용할 수 없습니다.</string>
    <string name="msg_permission_blackbox_mic">블랙박스 음성 녹음 기능을 사용하려면 마이크 권한이 필요합니다.</string>
    <string name="msg_permission_denied_blackbox_mic">마이크에 대한 접근 권한이 없어 블랙박스 음성 녹음 기능을 사용할 수 없습니다.</string>
    <string name="msg_base_permission_denied_uri_error">카카오내비 필수 권한을 허용한 후 다시 시도해 주세요.</string>
    <string name="msg_intro_map_none">지도 데이터가 삭제되어 클라우드 지도로 전환하였습니다. 더보기에서 다시 다운로드 해주세요.</string>
    <string name="msg_intro_map_old_ver">오래된 버전의 지도로 확인되어 클라우드 지도로 전환하였습니다. 더보기에서 다시 다운로드 해주세요.</string>
    <string name="label_webview_nomore">다시 보지 않기</string>
    <string name="label_main_add_destination">장소 등록</string>
    <string name="label_main_history">최근</string>
    <string name="label_main_tag">태그</string>
    <string name="label_main_more">더보기</string>
    <string name="label_main_destination_search">장소 검색</string>
    <string name="label_main_start_now">바로 시작</string>
    <string name="label_main_beehive_home">우리집</string>
</resources>